--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -86,6 +86,8 @@ button:focus-visible {
 
 .screen-content {
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .screen-content.content-panel {
