--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,3 +9,22 @@
     flex-direction: column;
     align-items: center;
 }
+
+.screen-desc {
+    margin-bottom: 10px;
+}
+
+.list-menu {
+    max-height: calc(100% - 150px);
+    overflow-y: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.menu-item {
+    width: 50%;
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+}
