--- a/assets/css/user-bar.css
+++ b/assets/css/user-bar.css
@@ -13,6 +13,7 @@
     border: 3px solid #000;
     overflow: hidden;
     margin-right: 8px;
+    background: #000;
 }
 
 .user-ava img {
@@ -51,7 +52,7 @@
 .coin-value {
     font-weight: 800;
     font-size: 15px;
-    line-height: 15px;
+    line-height: 16px;
     margin-right: 4px;
     color: white;
 }
