ADD - map screens, monster database

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -14,6 +14,7 @@ a {
 img {
     max-width: 100%;
     height: auto;
+    display: block;
 }
 
 button {
@@ -88,6 +89,7 @@ button:focus-visible {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .screen-content.content-panel {
