--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -15,7 +15,7 @@
 }
 
 .list-menu {
-    max-height: calc(100% - 150px);
+    max-height: calc(100% - 152px);
     overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
@@ -27,4 +27,8 @@
     display: block;
     text-align: center;
     margin-bottom: 10px;
+}
+
+.menu-item img {
+    margin: 0 auto;
 }
