--- a/assets/css/user-bar.css
+++ b/assets/css/user-bar.css
@@ -7,13 +7,17 @@
     display: flex;
 }
 
-.user-ava {
+.user-ava-wrap {
     width: 70px;
     height: 70px;
     border: 3px solid #000;
     overflow: hidden;
     margin-right: 8px;
-    background: #000;
+}
+
+.user-ava {
+    width: 64px;
+    height: 64px;
 }
 
 .user-ava img {
@@ -26,6 +30,8 @@
     font-weight: 800;
     font-size: 20px;
     font-size: 20px;
+    color: #fff;
+    text-shadow: 0 0 4px #000;
 }
 
 .user-star {
@@ -39,7 +45,7 @@
 
 .user-coin {
     background: #013b59;
-    border: 1px solid #01556d;
+    border: 2px solid #01556d;
     box-sizing: border-box;
     border-radius: 4px;
     width: 92px;
