--- a/public/assets/css/user-bar.css
+++ b/public/assets/css/user-bar.css
@@ -33,14 +33,19 @@
 .user-name {
     font-weight: 800;
     font-size: 20px;
-    font-size: 20px;
+    line-height: 20px;
     color: #fff;
     text-shadow: 0 0 4px #000;
+}
+
+.user-name:hover {
+    cursor: pointer;
 }
 
 .user-star {
     display: flex;
     align-items: center;
+    margin-bottom: 4px;
 }
 
 .user-star img {
@@ -71,4 +76,14 @@
 .coin-box {
     display: flex;
     align-items: center;
+}
+
+#user-setting {
+    width: 20px;
+    height: 20px;
+}
+
+#user-setting img {
+    width: 100%;
+    height: 100%;
 }
