--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -61,7 +61,7 @@
     box-sizing: border-box;
     box-shadow: 0px 8px 25px rgba(149, 157, 165, 0.2);
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px 15px;
     display: block;
     font-size: 16px;
     line-height: 20px;
@@ -81,9 +81,12 @@
     position: absolute;
     width: 40px;
     height: 40px;
-    background: #7fd220;
+    background: #4e4e4e;
     right: 0;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #send-chat i {
@@ -141,6 +144,14 @@
 
 .messenger-item-self .messenger-content {
     margin-left: auto;
-    text-align: right;
+    text-align: left;
     background: #dccb9d;
+}
+
+.messenger-item-self .timestamp {
+    text-align: right;
+}
+
+.timestamp {
+    font-size: 12px;
 }
