--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,8 +39,12 @@ body {
     left: 0;
     width: 100%;
     height: 75px;
-    background: #eaeaea;
     z-index: 99;
+}
+
+#app-bar.disable,
+#app-menu.disable {
+    z-index: -1;
 }
 
 #app-content {
