--- a/public/assets/css/monster-box-popup.css
+++ b/public/assets/css/monster-box-popup.css
@@ -39,7 +39,9 @@
 }
 
 .monster-stat-item {
-    width: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .monster-box-stats {
