--- a/public/assets/css/user-bar.css
+++ b/public/assets/css/user-bar.css
@@ -32,11 +32,15 @@
 
 .user-name {
     font-weight: 800;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 20px;
-    color: #fff;
-    text-shadow: 0 0 4px #000;
-    margin-bottom: 4px;
+    color: #ffffff;
+    background: black;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 6px transparent;
+    padding-right: 14px;
+    text-indent: 4px;
+    padding: 2px 14px 2px 0px;
 }
 
 .user-name:hover {
