--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -134,3 +134,43 @@ body.swal2-no-backdrop .swal2-container .swal2-modal {
 .swal2-popup {
     padding-bottom: 10px !important;
 }
+
+.fight-notice .fight-notice {
+    display: flex;
+    justify-content: space-around;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 18px;
+}
+
+.fight-notice .swal2-title {
+    font-weight: bold !important;
+    font-size: 24px !important;
+    line-height: 18px !important;
+    color: #000 !important;
+    margin-bottom: 19px;
+}
+
+.fight-back-map {
+    width: 122px;
+    height: 52px;
+    background-image: url(../img/screens/maps/btn-back-map.png);
+}
+
+.swal2-title {
+    font-size: 24px !important;
+    color: #000 !important;
+}
+
+.item-reward-img {
+    width: 300px;
+    height: 200px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.item-reward-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
