--- a/public/assets/css/monster-book-detail.css
+++ b/public/assets/css/monster-book-detail.css
@@ -1,8 +1,6 @@
 .monster-hold-info {
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    overflow-y: scroll;
 }
 
 .btn-back {
